--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,24 +2,27 @@
 
   <section class="wrapper--hero--section ">
     <app-header></app-header>
-    <div class="wrapper--hero container">
-      <div class="hero--text-block">
-        <div class="hero--text-title">
-          Own Your Crypto Adventure
-        </div>
-        <div class="hero--text-subtitle">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-        </div>
-        <div class="hero--text-action">
-          <button>
-            Get in Touch
-          </button>
+      <div class="wrapper--hero container section  fade-in-section">
+        <div class="hero--text-block">
+          <div class="hero--text-title">
+            Own Your Crypto Adventure
+          </div>
+          <div class="hero--text-subtitle">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+          </div>
+          <div class="hero--text-action">
+            <button>
+              Get in Touch
+            </button>
+          </div>
         </div>
       </div>
-    </div>
   </section>
 
-  <section class="wrapper---about--section">
+  <section class="wrapper---about--section section fade-in-section" >
+    <div class="about-us--logo--tablet">
+      <img src="assets/img/coin.png" alt="">
+    </div>
     <div class="wrapper---about container">
       <div class="about-us--info--main">
         <div class="about-us--info">
@@ -66,7 +69,7 @@
     </div>
   </section>
 
-  <section class="wrapper--our-service--section">
+  <section class="wrapper--our-service--section section  fade-in-section" >
   <div class="wrapper---our-service container">
     <div class="our-service--info--main">
       <div class="our-service--info--card--main">
@@ -139,7 +142,7 @@
   </div>
   </section>
 
-  <section class="wrapper--our-token--section">
+  <section class="wrapper--our-token--section section  fade-in-section">
     <div class="wrapper--our-token container">
       <div class="our-token--info">
         <div class="our-token--info--title">
@@ -191,7 +194,7 @@
     </div>
   </section>
 
-    <section class="wrapper--FAQ--section">
+    <section class="wrapper--FAQ--section section  fade-in-section">
       <div class="wrapper--FAQ container">
         <div class="FAQ--info">
           <div class="FAQ--info--title">
@@ -220,7 +223,7 @@
       </div>
     </section>
 
-    <section class="wrapper--team--section">
+    <section class="wrapper--team--section section  fade-in-section">
       <div class="wrapper--team">
 
         <div class="team--info">
@@ -386,7 +389,7 @@
       </div>
     </section>
 
-  <section class="wrapper--blog--section">
+  <section class="wrapper--blog--section section  fade-in-section">
     <div class="wrapper--blog container">
 
       <div class="blog--info">
@@ -470,7 +473,7 @@
     </div>
   </section>
 
-    <section class="wrapper--start-now--section">
+    <section class="wrapper--start-now--section   section  fade-in-section">
       <div class="wrapper--start-now container">
         <div class="start-now--info--main">
           <div class="start-now--info">
@@ -496,5 +499,5 @@
       </div>
     </section>
 
-  <app-footer></app-footer>
+  <app-footer class="section  fade-in-section"></app-footer>
 </div>
