--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,11 +1,14 @@
-.header--main {
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  align-items: center;
-  min-height: 100px;
-  z-index: 1;
+.wrapper--header {
+  .header--main {
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
+    min-height: 100px;
+    z-index: 1;
+  }
+
   .header--logo {
     display: flex;
     justify-content: center;
@@ -14,52 +17,145 @@
 
   .header--nav {
     display: flex;
+    justify-content: center;
     align-items: center;
-    max-width: 435px;
+    max-width: 100%;
     flex-grow: 1;
 
     nav {
       display: flex;
       justify-content: space-between;
-
-      flex-grow: 1;
       color: rgb(255, 255, 255);
       font-family: Montserrat;
       font-size: 24px;
       font-weight: 500;
       text-align: left;
+      width: 435px;
+    }
 
-      ul {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-grow: 1;
-        flex-basis: 0;
-        min-width: 0;
+    ul {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-grow: 1;
+      flex-basis: 0;
+      min-width: 0;
+    }
 
-        li {
-          cursor: pointer;
-          flex-grow: 1;
-          text-align: center;
-          color: rgb(255, 255, 255);
-          font-family: Inter;
-          font-size: 14px;
-          font-weight: 600;
-        }
-      }
+    ul li {
+      cursor: pointer;
+      flex-grow: 1;
+      text-align: center;
+      color: rgb(255, 255, 255);
+      font-family: Inter;
+      font-size: 14px;
+      font-weight: 600;
     }
   }
 
-  .header--action button{
+  .header--action button {
     cursor: pointer;
     display: flex;
-    padding: 13px 32px 13px 32px;
+    padding: 13px 32px;
     box-sizing: border-box;
     border-radius: 10px;
-    background: linear-gradient(225.00deg, rgb(24, 200, 255) 18.435%,rgb(147, 63, 254) 89.391%);
+    background: linear-gradient(225deg, rgb(24, 200, 255) 18.435%, rgb(147, 63, 254) 89.391%);
     color: rgb(248, 249, 250);
     font-family: Inter;
     font-size: 16px;
     font-weight: 600;
+    transition: all 0.3s ease;
+
   }
+  button:hover {
+    background: linear-gradient(225deg, rgb(147, 63, 254) 18.324%, rgb(24, 200, 255) 89.28%);
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  .burger-menu {
+    position: absolute;
+    right: 30px;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 25px;
+    height: 20px;
+    cursor: pointer;
+
+    z-index: 2;
+
+    span {
+      display: block;
+      width: 100%;
+      height: 3px;
+      background: #fff;
+      transition: all 0.3s;
+    }
+
+    &.open span:nth-child(1) {
+      transform: rotate(45deg) translate(7px, 7px);
+    }
+
+    &.open span:nth-child(2) {
+      opacity: 0;
+    }
+
+    &.open span:nth-child(3) {
+      transform: rotate(-45deg) translate(4.5px, -5px);
+    }
+  }
+
+  @media (max-width: 783px) {
+    .header--nav {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgb(11, 11, 15);
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      z-index: 1000;
+      transition: opacity 0.3s ease;
+    }
+
+    .header--nav.active {
+      display: flex;
+      background: linear-gradient(180deg, rgba(0, 194, 255, 0) 0%, rgb(255, 41, 195) 100%), rgb(11, 11, 15);
+    }
+
+    .header--nav nav ul {
+      flex-direction: column;
+    }
+
+    .header--nav nav ul li {
+      padding: 20px 0;
+      text-align: center;
+    }
+
+    .burger-menu {
+      display: flex;
+    }
+
+    .burger-menu.open {
+      right: 30px;
+      z-index: 1000;
+      position: fixed;
+
+    }
+  }
+
+  @media (max-width: 590px) {
+    .header--action button {
+      display: none !important;
+    }
+  }
+
+
+}
+
+body.menu-open {
+  overflow: hidden;
 }
