--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -16,7 +16,7 @@
       justify-content: space-between;
 
       .footer--info--description {
-        width: 380px;
+        max-width: 380px;
         min-height: 60px;
         color: rgb(206, 212, 218);
         font-family: Inter;
@@ -144,7 +144,7 @@
 
 
       .footer--info--description {
-
+        text-align: center !important;
       }
       .footer--info {
         gap: 32px;
